Bug 99468 - CALCULATING: some wildcard combination doesn't work at least with SUMIF()/COUNTIF()
Summary: CALCULATING: some wildcard combination doesn't work at least with SUMIF()/COU...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha1
Hardware: All All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:5.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-23 11:31 UTC by m_a_riosv
Modified: 2016-10-25 19:02 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Wildcar test. (32.68 KB, application/vnd.oasis.opendocument.spreadsheet)
2016-04-23 11:31 UTC, m_a_riosv
Details
Version 2 of Wildcard test. Originally created in LO 5.2 daily (32.90 KB, application/vnd.oasis.opendocument.spreadsheet)
2016-04-27 14:31 UTC, Pedro
Details

Note You need to log in before you can comment on or make changes to this bug.
Description m_a_riosv 2016-04-23 11:31:04 UTC
Created attachment 124588 [details]
Wildcar test.

Looks like some combinations of wildcard, doesn't work at least with SUMIF()/COUNTIF().

Example:

'b*a'  doesn't find 'b12abcd1234a'
Comment 1 Pedro 2016-04-23 12:30:08 UTC
Confirmed with

Version: 5.2.0.0.alpha1+
Build ID: 11f13f55b7e76811946979f363638597d882b88b
CPU Threads: 4; OS Version: Windows 6.19; UI Render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-04-22_01:37:28
Locale: pt-PT (pt_PT)

under Windows 10 x64
Comment 2 GerardF 2016-04-23 12:34:58 UTC
I can confirm also.

Just note that K3 and K23 are correct, you need to remove "Bad" in A15 which is part of the range and false the result.
Comment 3 Commit Notification 2016-04-24 14:45:03 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ffbe1b43bff59aae506446a5f408bba8ba9315c2

Resolves: tdf#99468 do greedy '*' match if substring match is not allowed

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2016-04-24 14:45:08 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5291e4826a9512bd6d8d3b03199c49222a83e972

unit test for tdf#99468

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Pedro 2016-04-27 14:22:43 UTC
Confirmed fixed in Master.

Tested with
Version: 5.2.0.0.alpha1+
Build ID: e7f55f15ccd97bc92e1400bc5862171a621da3e2
CPU Threads: 8; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-04-27_00:29:05
Locale: pt-PT (pt_PT)

under Win 7 Pro x64 SP1

However because apparently the sample ODS was not originally created in LO, automatic calculation is off.

The only way to verify that bug #99468 was fixed was to turn off Wildcards in formulas and then turn it back on.

I'm attaching an ODS created in LO for verification.
Comment 6 Pedro 2016-04-27 14:31:01 UTC
Created attachment 124680 [details]
Version 2 of Wildcard test. Originally created in LO 5.2 daily

File was re-created to avoid the Default "Never recalculate" which applies to ODF spreadsheets not saved by LibreOffice.
Fixed error in range mentioned in Comment #2