Resolves: tdf#99468 do greedy '*' match if substring match is not allowed

Change-Id: I89ac29b7e8c2e8c567e85a5025dbc1f50050465d